cmake_minimum_required (VERSION 2.6)
project (Nyvonna_CPU_ABM)


add_subdirectory(Agent)
add_subdirectory(FieldVariable)
add_subdirectory(World)
add_subdirectory(Patch)
add_subdirectory(ECM)
add_subdirectory(ArrayChain)
add_subdirectory(Utilities)
add_subdirectory(Diffusion)
add_subdirectory(Visualization)
add_subdirectory(Driver)

#added the subdir - Yvonna Jun 6 2013
